# tree-copy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tree_copy.py
